Added links to navigation

--- a/ui/src/components/NavBar/styles.css
+++ b/ui/src/components/NavBar/styles.css
@@ -17,7 +17,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    background-color: purple;
+    background-color: #2f2fa2;
     height: 56px;
 }
 
