--- a/ui/src/components/HeroSection/HeroSection.css
+++ b/ui/src/components/HeroSection/HeroSection.css
@@ -16,7 +16,7 @@ video {
 }
 
 .hero-container {
-    /* background: url('/images/img-home.jpg') center center/cover no-repeat; */
+    /* background: url('') center center/cover no-repeat; */
     height: 100vh;
     width: 100%;
     display: flex;
