Final changes to logout

--- a/ui/src/components/NavBar/styles.css
+++ b/ui/src/components/NavBar/styles.css
@@ -49,6 +49,10 @@ body {
     display: flex;
 }
 
+.usernameList{
+    color: white;
+}
+
 .toolbar__navigation-items li {
     padding: 0 0.5rem;
 }
