--- a/ui/src/components/NavBar/styles.css
+++ b/ui/src/components/NavBar/styles.css
@@ -17,7 +17,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    background-color: #3CBCC3;
+    background-color: #343634;
     height: 56px;
 }
 
