--- a/ui/src/components/ChatBot/Styles.css
+++ b/ui/src/components/ChatBot/Styles.css
@@ -252,6 +252,14 @@
     font-size: 2.3em;;
 }
 
+.error {
+    text-align: center;
+    color: red;
+    margin-bottom: 35px;
+    width: 100%;
+    font-size: 1.5em;;
+}
+
 .button {
     border-radius: 4px;
     border: none;
