Finished Discussion forum

--- a/ui/src/components/Notepad/notepadd.css
+++ b/ui/src/components/Notepad/notepadd.css
@@ -24,6 +24,7 @@
 }
 .MuiListItem-root.Mui-selected {
     background-color: #d4d8e8 !important;
+    /* position: relative; */
 }
 .no-note-selected {
     font-size: 48px;
