--- a/ui/src/components/HeroSection/HeroSection.css
+++ b/ui/src/components/HeroSection/HeroSection.css
@@ -12,7 +12,8 @@ video {
     justify-content: center;
     align-items: center;
     margin: auto;
-    width: 75%;
+    width: 100%;
+    height: 100%;
 }
 
 .hero-container {
@@ -31,6 +32,8 @@ video {
     color: #fff;
     font-size: 100px;
     margin-top: -100px;
+    width: 100%;
+    height: 100%;
 }
 
 .hero-container > p {
@@ -39,6 +42,7 @@ video {
     font-size: 32px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
     'Lucida Sans', Arial, sans-serif;
+
 }
 
 .hero-btns {
