--- a/ui/src/components/NavBar/navstyles.css
+++ b/ui/src/components/NavBar/navstyles.css
@@ -102,6 +102,7 @@ body {
     z-index: 200;
     transform: translateX(-100%);
     transition: transform .3s ease-out;
+    text-align: center;
 }
 
 .side-drawer.open {
